Replace get(0) to getFrist()